--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-champ_icons/*
-item_icons/*
-spell_icons/*
-__pycache__/*
+champ_icons/
+item_icons/
+spell_icons/
+__pycache__/
 champ_info.json 
 item_8.6.json
 item_icons.json
 champ_icons.json 
-static/item_icons/*
-static/spell_icons/*
-champion_icons/*
-champ1.json
-item1.json
+static/item_icons/
+static/spell_icons/
+champion_icons/
+*.json
 *.zip
