--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ python:
 
 install: 
     - pip3 install -r requirements.txt
+    - make
+    - chmod +x testme.sh 
 
 script: 
-    - python3 test_project.py
+    - ./testme.sh
 
