--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ python:
 install: 
     - pip3 install -r requirements.txt
     - make
-    - chmod +x testme.sh 
+    - chmod +x test_project.py 
 
 script: 
-    - ./testme.sh
+    - ./test_project.py
 
